# vr8-converter

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml
.github/workflows/: publish.yml
crates/: README.md
crates/vr8-cli/: Cargo.toml
crates/vr8-cli/src/: main.rs
crates/vr8-core/: Cargo.toml
crates/vr8-core/src/: converter.rs  lib.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/converter/: error.rs  mod.rs
src/lib/components/: Base.svelte  Navbar.svelte  SuccessView.svelte  ThemeToggle.svelte  Toast.svelte  fileList.svelte  footer.svelte
src/routes/: +layout.svelte  +page.svelte
