[package]
name = "vr8-converter"
version = "0.1.0"
description = "Simple VR8 to WAV converter"
authors = ["Bastiangx"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
rayon = "1.10.0"
indicatif = "0.17.9"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
